--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-textarea-autosize": "^1.1.1"
   },
